# fileflows

./: README.md  pyproject.toml
file_flows/: core.py  s3.py
fileflows/: google.py  s3.py  utils.py
tests/: test_all.py
