[project]
name = "fileflows"
version = "0.2.8"
description = "A single high-level file operations API for both object stores and local file system."
authors = [{ name = "Dan Kelleher", email = "kelleherjdan@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "tqdm",
    "s3fs[boto3]",
    "pydantic>=2.0.0",
    "pydantic-settings",
    "quicklogs>=2.0.0",
    "pyarrow",
    "duckdb",
    "xxhash",
]

[project.optional-dependencies]
dev = ["black", "pytest"]

[tool.setuptools]
packages = ["fileflows"]

[build-system]
requires = ["setuptools>=43.0.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"
